--- a/Blog.css
+++ b/Blog.css
@@ -19,35 +19,120 @@ body{
 
 /* left column in grid */
 
-.left{
-    margin-left: 100px;
-    width: 20rem;
-    height: 20rem;
-    margin-top: 50px;
-    text-align: center;
-}
+@media only screen and (max-width: 600px) {
+    .left{
+        margin: 26px;
+         width: auto;
+         height: auto;
+         text-align: center;
+     }
+    
+  }
+
+  @media (min-width: 600px) and (max-width: 768px) {
+    .left{
+        margin: 50px;
+      margin-left: 94px;
+         width: auto;
+         height: auto;
+         text-align: center;
+     }
+    
+  }
+  @media (min-width: 768px) and (max-width: 1113px) {
+
+    .left{
+       margin: 5px;
+       margin-top: 50px;
+         width: auto;
+         height: auto;
+         text-align: center;
+     }
+    
+  } 
+
+  @media (min-width: 1113px){
+
+    .left{
+       margin: 100px;
+     
+         width: auto;
+         height: auto;
+         text-align: center;
+     }
+    
+  } 
+  
+
+
+
 
 /* right column in grid */
 
-.right{
-    margin-left: 50px;
-    width: 20rem;
-    height: 20rem;
-    margin-top: 50px;
-    text-align: center;
-}
+@media only screen and (max-width: 600px) {
+    .right{
+        margin: 26px;
+         width: auto;
+         height: auto;
+         text-align: center;
+     }
+    
+  }
+
+  @media (min-width: 600px) and (max-width: 768px) {
+    .right{
+        margin: 50px;
+      margin-left: 94px;
+         width: auto;
+         height: auto;
+         text-align: center;
+     }
+    
+  }
+
+  @media (min-width: 768px) and (max-width: 1113px) {
+
+    .right{
+       
+        margin: 5px;
+        margin-top: 50px;
+          width: auto;
+          height: auto;
+          text-align: center;
+     }
+
+    }
+
+    @media (min-width: 1113px){
+
+        .right{
+            margin: 100px;
+            width: auto;
+            height: auto;
+            text-align: center;
+         }
+        
+      } 
+      
+
 
 /* page height */
 
-.grid-height{
-height: 600px;
+@media only screen and (min-width: 768px) {
+    .grid-height{
+        height: 600px;
+        
+        }
+   
+  } 
 
-}
+
 
 /* text in left column */
 
 .about{
     text-align: center;
+
 }
 
 /* left column 'click here' button */
